ARROW-5208: [Python] Add mask argument to pyarrow.infer_type, do not look at masked values when inferring output type in pyarrow.array

Author: Wes McKinney <wesm+git@apache.org>

Closes #4677 from wesm/ARROW-5208 and squashes the following commits:

833f075d9 <Wes McKinney> add another test case with ndarray dtype=object argument
d7860a206 <Wes McKinney> Add mask arguments to infer_type, respect mask in ConvertPySequence when inferring type